--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --module-bind js=babel-loader --display-error-details"
+    "build": "webpack --module-bind js=babel-loader",
+    "watch": "webpack --module-bind js=babel-loader --watch"
   },
   "repository": {
     "type": "git",
@@ -32,5 +33,8 @@
     "react-dom": "^16.8.6",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
+  },
+  "dependencies": {
+    "ledgers.js": "github:overhide/ledgers.js"
   }
 }
