--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.6",
@@ -35,6 +36,7 @@
     "webpack-cli": "^3.3.1"
   },
   "dependencies": {
-    "ledgers.js": "github:overhide/ledgers.js"
+    "ledgers.js": "github:overhide/ledgers.js",
+    "web3-eth-accounts": "1.0.0-beta.52"
   }
 }
