--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "homepage": "https://github.com/JakubNer/gamified-citizen-toll-enforcement#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "7.13.10",
+    "@babel/polyfill": "7.12.1",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-transform-runtime": "7.13.9",
+    "@babel/preset-env": "7.13.10",
+    "@babel/preset-react": "7.12.13",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.3",
     "hard-source-webpack-plugin": "^0.13.1",
@@ -39,8 +41,8 @@
     "webpack-cli": "^3.3.1"
   },
   "dependencies": {
-    "ledgers.js": "1.1.1",
-    "web3-eth-accounts": "1.0.0-beta.53",
-    "web3-utils": "1.0.0-beta.53"
+    "ledgers.js": "4.0.1",
+    "web3": "1.3.4",
+    "web3-utils": "1.3.4"
   }
 }
